syntax = "proto3";

package conversation;
//
// 会话消息
//
message ConversationMessage {
  // TS: string id
  string id = 1;

  // TS: string sessionId
  string sessionId = 2;

  // TS: 'system' | 'user' | 'assistant' | 'tool'
  enum Role {
    ROLE_UNSPECIFIED = 0; // 占位
    ROLE_SYSTEM = 1;
    ROLE_USER = 2;
    ROLE_ASSISTANT = 3;
    ROLE_TOOL = 4;
  }
  Role role = 3;

  // TS: string content
  string content = 4;

  // TS: number index
  int32 index = 5;

  // TS: string | undefined uiMessageId
  string uiMessageId = 6;

  // TS: modelMessageSnapshot?: ModelMessage
  // 你现在是 JSON.stringify 后存为 string
  string modelMessageSnapshot = 7;

  // TS: Record<string, unknown> metadata
  // 在 TS 里是 Record<string, string> 做中间层
  map<string, string> metadata = 8;

  // TS: Date createdAt (毫秒时间戳)
  int64 createdAt = 9;

  // TS: Date updatedAt (毫秒时间戳)
  int64 updatedAt = 10;
}

//
// 会话 Session
//
message ConversationSession {
  // TS: string sessionId
  string sessionId = 1;

  // TS: string userId
  string userId = 2;

  // TS: string tenantId
  string tenantId = 3;

  // TS: 'web-chat' | 'voice' | 'api'
  enum Channel {
    CHANNEL_UNSPECIFIED = 0; // 占位
    CHANNEL_WEB_CHAT = 1;
    CHANNEL_VOICE = 2;
    CHANNEL_API = 3;
  }

  Channel channel = 4;

  // TS: string title
  string title = 5;

  // TS: boolean deleted
  bool deleted = 6;

  // 会话状态：active | ended | archived
  enum Status {
    STATUS_UNSPECIFIED = 0;
    STATUS_ACTIVE = 1;    // 对应 'active'
    STATUS_ENDED = 2;     // 对应 'ended'
    STATUS_ARCHIVED = 3;  // 对应 'archived'
  }

  Status status = 7;

  // TS: Date startedAt (毫秒时间戳)
  int64 startedAt = 8;

  // TS: Date lastMessageAt (毫秒时间戳)
  int64 lastMessageAt = 9;

  // TS: Date createdAt (毫秒时间戳)
  int64 createdAt = 10;

  // TS: Date updatedAt (毫秒时间戳)
  int64 updatedAt = 11;

  // TS: Record<string, unknown> metadata
  map<string, string> metadata = 12;
}